2003-07-30  Alexandre Pigolkine <pigolkine@gmx.de>
	* Bitmap.cs		
	* GDKfunctions.cs
	* Image.cs
			painting on loaded image 

2003-06-26  Alexandre Pigolkine <pigolkine@gmx.de>
	* Bitmap.cs		remember format
	* Graphics.cs	DrawLine functions

2003-06-22  Alexandre Pigolkine <pigolkine@gmx.de>
	* Font.cs
	* Graphics.cs
	* Xrfunctions.cs
		implementaion of DrawString added

2003-06-22  Alexandre Pigolkine <pigolkine@gmx.de>
	* FontFamily.cs 	added

2003-06-18  Alexandre Pigolkine <pigolkine@gmx.de>
	* Bitmap.cs		
	* Graphics.cs 	
	* Xrfunctions.cs
		more implementation
		
	* SolidBrush.cs		added

2003-06-15  Alexandre Pigolkine <pigolkine@gmx.de>
	* Bitmap.cs		
	* Image.cs 	
		support of InternalImageInfo, image loading

2003-06-06  Alexandre Pigolkine <pigolkine@gmx.de>
	* Bitmap.cs
	* GDKfunctions.cs
	* Graphics.cs
	* Image.cs
	* Pen.cs
	* Xrfunctions.cs
			first version of Xr implementations